istio/argocd-ingres.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - 'argocd.ecositema.com'
      port:
        name: http
        number: 8080
        protocol: HTTP
