istio/kiali-ingres.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - 'kiali.ecositema.com'
      port:
        name: http
        number: 8080
        protocol: HTTP
