istio/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-virtualservice
  namespace: argocd
spec:
  hosts:
    - "*"
  gateways:
    - bookinfo-gateway
  http:
  - route:
      - destination:
          host: argocd-server.argocd.svc.cluster.local
          port:
            number: 80
