istio/kiali.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
    - "kiali.ecositema.com"
  gateways:
    - istio-gateway
  http:
  - route:
      - destination:
          host: kiali.istio-system.svc.cluster.local
          port:
            number: 20001
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
    - "grafana.ecositema.com"
  gateways:
    - istio-gateway
  http:
  - route:
      - destination:
          host: grafana.istio-system.svc.cluster.local
          port:
            number: 3000
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api
  namespace: default
spec:
  hosts:
    - "api.ecositema.com"
  gateways:
    - default-gateway
  http:
  - route:
      - destination:
          host: productpage.default.svc.cluster.local
          port:
            number: 9080


---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prod-route
  namespace: istio-system
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/prod`)
    kind: Rule
    services:
    - name: prod-service
      port: 80
